[project]
name = "labagent"
version = "0.1.0"
description = ""
authors = [
    {name = "tamil",email = "tamilmani.p@solitontech.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "pydantic-ai (>=0.1.11,<0.2.0)",
    "pydantic (>=2.11.4,<3.0.0)",
    "streamlit (>=1.45.0,<2.0.0)",
    "sqlalchemy (>=2.0.40,<3.0.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "textwrap3 (>=0.9.2,<0.10.0)",
    "dotenv (>=0.9.9,<0.10.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
